<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/edit"
        android:layout_margin="16dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        app:backgroundTint="@color/colorAccent"
        app:borderWidth="0dp"
        app:elevation="6dp"
        app:fabSize="normal"/>

    <GridLayout
        android:id="@+id/grid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:columnCount="2"
        android:orientation="horizontal"
        android:rowCount="2"
        android:layout_centerHorizontal="true">

        <TextView
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_columnSpan="2"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            android:text=""
            android:textAlignment="center"
            android:textColor="@color/colorAccent"
            android:textSize="25sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edit"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_columnSpan="2"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            android:textAlignment="center"
            android:textColor="@color/colorAccent"
            android:textSize="20sp"
            android:visibility="gone"
            android:lines="1"
            android:maxLines="1"
            android:singleLine="true"/>

        <androidx.cardview.widget.CardView
            android:id="@+id/card1"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_row="1"
            android:layout_column="0"
            android:layout_margin="15dp"
            app:cardBackgroundColor="@color/colorAccent"
            app:cardCornerRadius="20dp"
            app:cardElevation="10dp"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/calender"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:src="@drawable/calendar"
                    app:layout_constraintBottom_toTopOf="@+id/date"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="iojoidfcsifdsifj"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="18sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/calender" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/card2"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_row="1"
            android:layout_column="1"
            android:layout_margin="15dp"
            app:cardBackgroundColor="@color/colorAccent"
            app:cardCornerRadius="20dp"
            app:cardElevation="10dp"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/repet"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:src="@drawable/update"
                    app:layout_constraintBottom_toTopOf="@+id/repetitions"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/repetitions"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="iojoidfcsifdsifj"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="18sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/repet" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>
    </GridLayout>
</RelativeLayout>